fixed landing align

--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,7 @@ html{
 {
   width: 60%;
   height: 60%;
-  margin-left: 2%;
+  margin-left: 0%;
   max-width: 100%
   
 }
